@@ -14,8 +14,8 @@
 # debugMode - Toggle debugging information (true/false).
 # ftpDaemon - FTP daemon to support, must be glftpd or ioftpd.
 # modules   - List of module names to load on start-up.
-# themeFile - Theme file to read (relative path).
-# varFiles  - List of variable definition files (relative paths).
+# themeFile - Theme file to read, be must located in the "themes" dir.
+# varFiles  - List of variable definition files, be located in the "vars" dir.
 #
 [General]
 cmdPrefix = !alc
@@ -25,8 +25,8 @@ siteTag   = ALC
 debugMode = True
 ftpDaemon = ioftpd
 modules   = free groups nxtools readlogs
-varFiles  = vars/core.vars vars/ioftpd.vars vars/iozs.vars vars/nxtools.vars ./AlcoBot.vars
-themeFile = themes/default-io.theme
+varFiles  = core.vars ioftpd.vars iozs.vars nxtools.vars
+themeFile = default-io.theme
 
 #### ioFTPD
 #
